--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "http-status-codes": "^1.4.0"
+    "http-status-codes": "^1.4.0",
+    "mongodb": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
