--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "express-sesssion": "^1.15.5",
+    "express-session": "^1.17.1",
     "http-status-codes": "^1.4.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.0",
