--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "http-status-codes": "^1.4.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.0",
-    "mongoose": "^5.10.0"
+    "mongoose": "^5.10.0",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
