--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "tld-extract": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
