--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
     "passport-local-mongoose": "^6.0.1",
+    "rand-token": "^1.0.1",
     "tld-extract": "^2.0.0"
   },
   "devDependencies": {
