--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "http-status-codes": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
